# unboxer

./: .gitignore  CONTEXT.md  README.md  TODO.md  db.py  prompts.py  pyproject.toml  repomix.config.ts  rew.py  sandbox.Dockerfile  sandbox.json  sandbox.py  sandbox.sh  sandbox.toml  sandbox_run.py  sandbox_test.py  test_env.py  test_fs.py  train.py  trainer.py  un.py  un.sh  unboxer.py  wasm.Dockerfile  wasm.js
configs/: unboxer.toml
environments/unboxer/: README.md  __init__.py  pyproject.toml  unboxer.py
old/: sandbox.py  sandbox.toml  wasm.js
proxy/: Cargo.toml
proxy/src/: main.rs
