[project]
name = "un"
version = "0.1.0"
description = "blackbox function reverse engineering RL environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click", "pytest", "result", "xxhash", "verifiers[rl]"]

[project.scripts]
un = "un:main"

[tool.uv]
package = true
override-dependencies = [
    "triton; platform_system == 'Linux'",
    "flash-attn; platform_system == 'Linux'",
]

[tool.setuptools]
py-modules = ["un"]

[tool.pytest.ini_options]
python_files = ["*.test.py", "test_*.py"]
addopts = "-s"
