[project]
name = "unboxer"
description = "blackbox function reverse engineering RL environment"
# tags = ["reverse-engineering", "program-synthesis", "RL"]
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["verifiers>=0.1.7.post0", "un"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["unboxer.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
